--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,10 @@ utility_coordinator:
   name: Jacek Czelak
   email: jacek.czelak@austintexas.gov
   phone: 5124044229
+security_coordinator:
+  name: Marcela Lopes
+  email: marcela.lopes@austintexas.gov
+  phone: 5124044120
 sales_manager:
   name: Jeff Kuryak
   email: jeff.kuryak@austintexas.gov
