Customize site config content

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "AJV 2025 LSC 18s, SW Boys Classic, and First Point Collegiate Challenge"
+title: "JVAA 2025 LSC 18s, SW Boys Classic, and First Point Collegiate Challenge"
 description: Your one-stop shop for planning your event at the Austin Convention Center
 url: //ajv-2025-lsc-18s-sw-boys-classic-and.austinconventioncenter.com
 start_date: 2025-01-17
